# px-mcp-server

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py
src/prometheux_mcp/: __main__.py  client.py  config.py
