[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheux-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Prometheux - enabling AI agents to interact with knowledge graphs and reasoning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Prometheux Limited", email = "info@prometheux.ai" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "prometheux",
    "knowledge-graph",
    "reasoning",
    "vadalog"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://prometheux.ai"
Documentation = "https://docs.prometheux.ai"
Repository = "https://github.com/prometheux-ar/px-mcp-server"
Issues = "https://github.com/prometheux-ar/px-mcp-server/issues"

[project.scripts]
prometheux-mcp = "prometheux_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prometheux_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

